[project]
name = "TDTPy"
description = "Module for communicating with TDT's System 3 hardware"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
readme = "README.rst"
authors = [
    {name = "Brad Buran", email = "bburan@alum.mit.edu"},
    {name = "Brad Buran", email = "info@bradburan.com"},
    {name = "Eric Larson"},
]
maintainers = [
    {name = "Brad Buran", email="bburan@alum.mit.edu"},
    {name = "Eric Larson"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
    "License :: OSI Approved"
]

dependencies = [
	"pywin32",
	"numpy",
]
dynamic = ["version"]

[project.urls]
homepage = "http://tdtpy.readthedocs.org"
repository = "https://github.com/labsn/tdtpy"

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx"]

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "tdt/version.py"
